feat: publish linkerland devlog001

--- a/src/content/post/linkerland/devlogs/001-writing-a-linker-map-parser.mdx
+++ b/src/content/post/linkerland/devlogs/001-writing-a-linker-map-parser.mdx
@@ -1,9 +1,15 @@
 ---
 title: Writing a Linker Map Parser - Linkerland Devlog 001
 description: Inaugural post of the Linkerland Devlog series, where I talk about writing a parser for linker map files.
-publishDate: "Sept 5 2024"
-tags: []
-draft: true
+publishDate: "Sept 7 2024"
+tags:
+  - rust
+  - linkers
+  - linker map
+  - parsers
+  - linux
+  - macos
+  - systems programming
 coverImage:
   src: "./covers/001-writing-a-linker-map-parser.png"
   alt: "Writing A Linker Map Parser - Linkerland Devlog 001"
