fix: cover og image path

--- a/src/content/post/linkerland/devlogs/001-writing-a-linker-map-parser.mdx
+++ b/src/content/post/linkerland/devlogs/001-writing-a-linker-map-parser.mdx
@@ -14,7 +14,7 @@ coverImage:
   src: "./covers/001-writing-a-linker-map-parser.png"
   alt: "Writing A Linker Map Parser - Linkerland Devlog 001"
   border: true
-ogImage: "./covers/001-writing-a-linker-map-parser.png"
+ogImage: "/covers/001-writing-a-linker-map-parser.png"
 ---
 
 import Tweet from "astro-tweet"
